<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbox" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>
</menu>
