<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryApps"
    tools:context=".view.authentication.LoginRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewGirlsThings"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/girls_things"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/text_welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageViewGirlsThings"
                app:layout_constraintTop_toBottomOf="@+id/imageViewGirlsThings" />

            <TextView
                android:id="@+id/textViewCampaign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/text_campaign"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
                app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_background_primary"
                android:onClick="goToLogin"
                android:text="@string/text_login"
                app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
                app:layout_constraintStart_toStartOf="@+id/textViewCampaign"
                app:layout_constraintTop_toBottomOf="@+id/textViewCampaign" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_background_primary"
                android:onClick="goToRegister"
                android:text="@string/text_register"
                app:layout_constraintEnd_toEndOf="@+id/textViewCampaign"
                app:layout_constraintStart_toEndOf="@+id/buttonLogin"
                app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/textViewPolicyOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/policy_text"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/textViewPolicyTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="Terms Of Service"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewPolicyOne"
                app:layout_constraintTop_toTopOf="@+id/textViewPolicyOne" />

            <TextView
                android:id="@+id/textViewPolicyThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewPolicyOne"
                app:layout_constraintTop_toBottomOf="@+id/textViewPolicyOne" />

            <TextView
                android:id="@+id/textViewPolicyFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="24dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewPolicyThree"
                app:layout_constraintTop_toTopOf="@+id/textViewPolicyThree" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>