<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryApps"
    tools:context=".view.authentication.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:onClick="onBackPressed"
        android:src="@drawable/ic_keyboard_backspace_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_fill_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageViewBack"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFill"
        app:layout_constraintStart_toStartOf="@+id/textViewFill"
        app:layout_constraintTop_toBottomOf="@+id/textViewFill">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryApps"
                android:gravity="center|top"
                android:padding="16dp"
                app:hintTextAppearance="@style/CustomTextInputLayout"
                app:layout_constraintBottom_toTopOf="@id/viewLineOne"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/editTextFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryApps"
                    android:digits="QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm"
                    android:fontFamily="sans_serif"
                    android:hint="@string/sign_up_full_name_hint"
                    android:inputType="textCapWords"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/viewLineOne"
                android:layout_width="0dp"
                android:layout_height="0.75dp"
                android:background="@color/grey_300"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullName"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryApps"
                android:gravity="center|top"
                android:padding="16dp"
                app:hintTextAppearance="@style/CustomTextInputLayout"
                app:layout_constraintBottom_toTopOf="@id/viewLineTwo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLineOne"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryApps"
                    android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_-.@"
                    android:fontFamily="sans_serif"
                    android:gravity="center|start"
                    android:hint="@string/sign_up_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/viewLineTwo"
                android:layout_width="0dp"
                android:layout_height="0.75dp"
                android:background="@color/grey_300"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutNoHanphone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNoHanphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryApps"
                android:gravity="center|top"
                android:padding="16dp"
                app:hintTextAppearance="@style/CustomTextInputLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLineTwo"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryApps"
                    android:fontFamily="sans_serif"
                    android:hint="@string/sign_in_phone_hint"
                    android:inputType="number"
                    android:maxLength="15"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonGoToRegister"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@drawable/button_background_second_primary"
        android:onClick="signIn"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>